--- a/frontend/public/thank-you.html
+++ b/frontend/public/thank-you.html
@@ -5,16 +5,51 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Thank you</title>
     <style>
-      body { font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Arial; display:flex; align-items:center; justify-content:center; height:100vh; margin:0; background:#f8fafc }
-      .card { background:white; padding:32px; border-radius:12px; box-shadow:0 6px 18px rgba(0,0,0,.08); text-align:center; max-width:520px }
+      :root{ --accent:#16a34a }
+      html,body{height:100%}
+      body { font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Arial; display:flex; align-items:center; justify-content:center; margin:0; background:#f8fafc }
+      .card { background:white; padding:36px 40px; border-radius:14px; box-shadow:0 10px 30px rgba(2,6,23,.08); text-align:center; max-width:560px; width:90% }
       a { color:#f97316; text-decoration:none; font-weight:600 }
+
+      /* Tick animation */
+      .tick-wrap{display:flex;flex-direction:column;align-items:center;gap:20px}
+      .tick { width:110px; height:110px; display:inline-block }
+      .circle{fill:none;stroke:var(--accent);stroke-width:6;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:350;stroke-dashoffset:350;animation:drawCircle .9s ease-out forwards }
+      .check{fill:none;stroke:white;stroke-width:6;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:100;stroke-dashoffset:100;animation:drawCheck .5s .9s ease-out forwards }
+      .bg-circle{fill:var(--accent);transform-origin:50% 50%;transform:scale(0);animation:scaleIn .45s .75s cubic-bezier(.2,.9,.2,1) forwards}
+
+      @keyframes drawCircle{to{stroke-dashoffset:0}}
+      @keyframes drawCheck{to{stroke-dashoffset:0}}
+      @keyframes scaleIn{to{transform:scale(1)}}
+
+      /* Text animation */
+      .title{font-size:28px;margin:0;color:#0f172a;opacity:0;transform:translateY(6px);animation:fadeUp .5s .9s forwards}
+      .subtitle{color:#334155;margin:8px 0 0;opacity:0;transform:translateY(6px);animation:fadeUp .5s 1.05s forwards}
+      @keyframes fadeUp{to{opacity:1;transform:none}}
+
+      .home-btn{display:inline-block;margin-top:18px;padding:10px 18px;border-radius:10px;background:#0f172a;color:white;text-decoration:none;font-weight:600}
     </style>
   </head>
   <body>
     <div class="card">
-      <h1>Thank you!</h1>
-      <p>Your submission has been received. We'll get back to you shortly.</p>
-      <p><a href="/">Return to Home</a></p>
+      <div class="tick-wrap">
+        <svg class="tick" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" aria-hidden>
+          <circle class="circle" cx="60" cy="60" r="45" />
+          <g class="bg-circle">
+            <circle cx="60" cy="60" r="45" />
+          </g>
+          <polyline class="check" points="40 63 54 76 80 48" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+
+        <h1 class="title">Submission received</h1>
+        <p class="subtitle">Thanks — your form has been submitted successfully.</p>
+        <a class="home-btn" href="/">Back to home</a>
+      </div>
+
+      <script>
+        // Optional: minor auto-close or analytics hook could go here
+        // Keep page lightweight: no external libs.
+      </script>
     </div>
   </body>
 </html>
