--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AWS Consultancy Website</title>
+    <title>AWS Partner X | APN Partner Enablement & Cloud Consulting</title>
+    <meta name="description" content="AWS Partner X helps companies achieve AWS Partner Network (APN) success through enablement, consulting, and cloud growth strategies." />
+
+
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
